--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
